# anarlog

./: AGENTS.md  Anarlog.bat  Cargo.toml  pnpm-lock.yaml  Толмач.bat
.agents/skills/axum-test-transport/: SKILL.md
.agents/skills/migrate-to-sqlite/: SKILL.md
.agents/skills/new-changelog/: SKILL.md
.agents/skills/release-new-version/: SKILL.md
.github/reports/legal-review/: 2026-04.md
.github/workflows/: api_cd.yaml  desktop_cd.yaml  desktop_ci.yaml  stt_e2e.yaml
apps/api/: AGENTS.md
apps/api/src/: env.rs
apps/desktop/: index.html  package.json
apps/desktop/public/: theme-boot.js
apps/desktop/src/: main.tsx  test-setup.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.conf.stable.json  tauri.conf.staging.json
apps/web/: AGENTS.md  BRAND.md  netlify.toml
apps/web/content/: AGENTS.md
apps/web/public/: robots.txt
apps/web/src/: env.ts  routeTree.gen.ts
crates/am/src/: model.rs
crates/api-env/src/: lib.rs
crates/api-nango/src/: config.rs
crates/api-support/src/: chatwoot.rs  github.rs  redact.rs
crates/audio-actual/: Cargo.toml
crates/audio-actual/src/: norm.rs  rt_ring.rs
crates/cactus-model/src/: lib.rs
crates/chrome-native-host/: AGENTS.md
crates/cloudsync/: AGENTS.md
crates/db-app/migrations/: 20260624000000_repair_templates.sql  20260706000000_translate_default_templates.sql
crates/db-app/src/: lib.rs
crates/db-cli/src/: runtime.rs
crates/fs-sync-core/src/: lib.rs  path.rs  session.rs  test_fixtures.rs  types.rs
crates/language/src/: lib.rs
crates/listener-core/: Cargo.toml
crates/listener-core/src/: lib.rs  live_transcript.rs
crates/listener2-core/: Cargo.toml
crates/listener2-core/src/: lib.rs
crates/local-model/: Cargo.toml
crates/local-model/src/: lib.rs
crates/local-stt-core/src/: lib.rs
crates/mobile-bridge/src/: db.rs  error.rs
crates/nango/src/: lib.rs
crates/notification-macos/: AGENTS.md
crates/notification-macos/examples/: test_notification_with_event.rs
crates/owhisper-client/: Cargo.toml
crates/owhisper-client/src/: lib.rs  local_soniqo_live.rs
crates/template-app/assets/: chat.system.md.jinja  enhance.system.md.jinja  event-contact.system.md.jinja  event-contact.user.md.jinja
crates/template-app/src/: chat.rs  enhance.rs  event_contact.rs  lib.rs
crates/transcribe-soniqo/: Cargo.toml  build.rs
crates/transcribe-soniqo/src/: lib.rs
crates/transcribe-soniqo/swift-lib/: Package.resolved  Package.swift
crates/transcribe-soniqo/swift-lib/src/: lib.swift
crates/transcript/src/: channel_state.rs  label.rs  processor.rs  render.rs
docs/: release-build.md  windows-gpu-whisper.md
plugins/db/: Cargo.toml
plugins/db/src/: error.rs  lib.rs  runtime.rs
plugins/db/src/import/: calendars.rs  events.rs  templates.rs
plugins/fs-sync/: build.rs
plugins/fs-sync/src/: ext.rs  (+2 more)
plugins/local-stt/: Cargo.toml
plugins/settings/: build.rs
plugins/transcription/: Cargo.toml
plugins/transcription/js/: bindings.gen.ts
plugins/transcription/src/: api.rs
plugins/transcription/src/listener/: commands.rs
plugins/updater2/: Cargo.toml  build.rs
tools/claude-oai-shim/: .gitignore  server.py
tools/meeting-webhook/: .gitignore  README.md  watch.py
(+651 files in other folders)
