[package]
name = "transcribe-soniqo"
version = "0.1.0"
edition = "2024"

[build-dependencies]

[dependencies]
hypr-language = { workspace = true }
owhisper-interface = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { workspace = true, features = ["build"] }

[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = { workspace = true }
