[package]
name = "tauri-plugin-db"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-db"
description = ""

[dependencies]
hypr-db-app = { workspace = true }
hypr-db-core = { workspace = true }
hypr-db-execute = { workspace = true }
hypr-db-migrate = { workspace = true }
hypr-db-reactive = { workspace = true, features = ["specta"] }
hypr-storage = { workspace = true }
hypr-tauri-utils = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true, features = ["serde_json"] }
specta-typescript = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "sqlite-unbundled"] }
tauri = { workspace = true, features = ["test"] }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
